[fix]: fix text dark mode

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -198,7 +198,9 @@ img{
 }
 
 
-
+.descr.light{
+    color: #fff;
+}
 .gallery-inner{
     display: flex;
     justify-content: center;
